Adding Exception Handling in Product and Category controller